--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- SPA_HEAD -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>NASA APOD</title>
 
   </head>
   <body>
